Fix user being able to click on invisible links.

--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ vertical-align: top;
 font-weight: bold;
 flex-wrap: wrap;
 justify-content: space-around;
+pointer-events: none;
 }
 
 .extrainfo {
